# DesktopAutoPilotX

./: .env.example  .replit  CONTRIBUTING.md  README.md  app.py  main.py  models.py  pyproject.toml  replit.nix  replit_zip_error_log.txt  routes.py
.cache/nix/: binary-cache-v6.sqlite
.cache/replit/env/: latest  latest.json
.cache/replit/nix/: env.json
.local/state/replit/agent/: repl_state.json
.upm/: store.json
config/models/: llama2.json  llava.json
docs/: api.md  architecture.md  configuration.md
services/: automation_service.py  model_registry.py  ollama_service.py  screenshot_service.py
static/css/: custom.css  styles.css
static/js/: automation.js  ui.js
templates/: base.html  history.html  index.html
